:sparkles: [FEAT] 배틀룸 결과 조회 API
